Issue #GEN-180: Changed margins to 0 to avoid them being to small on smaller devices

--- a/web/themes/custom/genlyd_aarhus/source/_patterns/01-modules/status-messages.scss
+++ b/web/themes/custom/genlyd_aarhus/source/_patterns/01-modules/status-messages.scss
@@ -15,7 +15,7 @@ $message-large:                  $spacing-pixel-large;
    ========================================================================== */
 
 .status-messages {
-  @include layout-wrapper($breakpoint-mediumdesk, auto);
+  @include layout-wrapper($breakpoint-mediumdesk, 0);
 
   margin-top: $message-small;
 
